@@ -10,6 +10,7 @@ Version 1.4.2+svn:
      (debian bug #426318)
    * added some includes to fix compilation problems with Sun Studio 12 
      (patch #1066)
+   * fixed null-pointer reference in network code
 
 Version 1.4.2:
  * campaigns
